[workspace]
members = [".","trusty-examples"]

[package]
name = "trusty"
version = "0.1.0"
edition = "2021"

[lib]
name = "trusty"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "trusty"
python-source = "python"

[dependencies]
pyo3 = { version = "=0.22.6", features = ["extension-module"] }
arrow = { version = "53.3.0", features = ["pyarrow"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
rayon ="1.10.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_futures","async_tokio"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
approx = "0.5.1"
rayon = "1.10.0"
gbdt = { git = "https://github.com/letsql/gbdt-rs.git", rev = "8262de1d20ab6dc7c7e6778b243578d190fb6a62" }
prettytable = "0.10.0"
rand = "0.8.5"

[[bench]]
name = "trusty"
harness = false

[[bench]]
name = "predict"
harness = false
